--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://jasonyang96.github.io/dash/",
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
     "@rematch/core": "^1.2.0",
     "react": "^16.9.0",
